fixed report